@@ -13,33 +13,38 @@
 
 package org.eclipse.jetty.tests.distribution;
 
-import java.io.BufferedWriter;
 import java.io.File;
 import java.io.FileWriter;
 import java.net.URI;
-import java.nio.charset.StandardCharsets;
+import java.net.http.WebSocket;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.StandardOpenOption;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Queue;
 import java.util.UUID;
+import java.util.concurrent.CompletionStage;
+import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 
 import org.eclipse.jetty.client.HttpClient;
 import org.eclipse.jetty.client.api.ContentResponse;
 import org.eclipse.jetty.client.dynamic.HttpClientTransportDynamic;
 import org.eclipse.jetty.client.http.HttpClientTransportOverHTTP;
+import org.eclipse.jetty.http.HttpScheme;
 import org.eclipse.jetty.http.HttpStatus;
 import org.eclipse.jetty.http2.client.HTTP2Client;
 import org.eclipse.jetty.http2.client.transport.HttpClientTransportOverHTTP2;
+import org.eclipse.jetty.http3.client.HTTP3Client;
+import org.eclipse.jetty.http3.client.transport.HttpClientTransportOverHTTP3;
 import org.eclipse.jetty.io.ClientConnector;
-import org.eclipse.jetty.toolchain.test.PathAssert;
-import org.eclipse.jetty.util.IO;
+import org.eclipse.jetty.toolchain.test.PathMatchers;
+import org.eclipse.jetty.util.BlockingArrayQueue;
 import org.eclipse.jetty.util.ssl.SslContextFactory;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.EnabledForJreRange;
@@ -50,6 +55,7 @@ import org.junit.jupiter.params.provider.ValueSource;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.not;
@@ -98,20 +104,16 @@ public class DistributionTests extends AbstractJettyHomeTest
             .jettyVersion(jettyVersion)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
-        
-        String mods = "resources,server,http," +
-            toEnvironment("webapp", env) + "," +
-            toEnvironment("deploy", env) + "," +
-            toEnvironment("apache-jsp", env) + "," +
-            toEnvironment("servlet", env) + "," +
-            toEnvironment("quickstart", env);
-        
-        String[] args1 = {
-            "--approve-all-licenses",
-            "--add-modules=" + mods
-        };
 
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        String mods = String.join(",",
+            "resources", "server", "http",
+            toEnvironment("webapp", env),
+            toEnvironment("deploy", env),
+            toEnvironment("apache-jsp", env),
+            toEnvironment("servlet", env),
+            toEnvironment("quickstart", env)
+        );
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=" + mods))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -150,32 +152,26 @@ public class DistributionTests extends AbstractJettyHomeTest
     @ValueSource(strings = {"ee9", "ee10"})
     public void testSimpleWebAppWithJSPandJSTL(String env) throws Exception
     {
-        Path jettyBase = newTestJettyBaseDirectory();
         String jettyVersion = System.getProperty("jettyVersion");
         JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
-            .jettyBase(jettyBase)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
-        
-        String mods = "resources,server,http,jmx," +
-            toEnvironment("webapp", env) + "," +
-            toEnvironment("deploy", env) + "," +
-            toEnvironment("apache-jsp", env) + "," +
-            toEnvironment("glassfish-jstl", env);
 
-        String[] args1 = {
-            "--create-start-ini",
-            "--approve-all-licenses",
-            "--add-modules=" + mods
-        };
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        String mods = String.join(",",
+            "resources", "server", "http", "jmx",
+            toEnvironment("webapp", env),
+            toEnvironment("deploy", env),
+            toEnvironment("apache-jsp", env),
+            toEnvironment("glassfish-jstl", env)
+        );
+        try (JettyHomeTester.Run run1 = distribution.start("--create-start-ini", "--approve-all-licenses", "--add-modules=" + mods))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
 
             // Verify that --create-start-ini works
-            assertTrue(Files.exists(jettyBase.resolve("start.ini")));
+            assertTrue(Files.exists(distribution.getJettyBase().resolve("start.ini")));
 
             File war = distribution.resolveArtifact("org.eclipse.jetty." + env + ".demos:jetty-" + env + "-demo-jsp-webapp:war:" + jettyVersion);
             distribution.installWarFile(war, "test");
@@ -194,26 +190,27 @@ public class DistributionTests extends AbstractJettyHomeTest
         }
     }
 
-    @Disabled //TODO runtime can't find org.objectweb.asm on module path?
     @ParameterizedTest
-    @ValueSource(strings = {"ee9", "ee10"})
+    @ValueSource(strings = {"ee10"})
     public void testSimpleWebAppWithJSPOnModulePath(String env) throws Exception
     {
+        // Testing with env=ee9 is not possible because jakarta.transaction:1.x
+        // does not have a proper module-info.java, so JPMS resolution will fail.
+        // For env=ee10, jakarta.transaction:2.x has a proper module-info.java.
+
         String jettyVersion = System.getProperty("jettyVersion");
         JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
-        
-        String mods = "resources,server,http,jmx," +
-            toEnvironment("webapp", env) + "," +
-            toEnvironment("deploy", env) + "," +
-            toEnvironment("apache-jsp", env);
-        String[] args1 = {
-            "--approve-all-licenses",
-            "--add-modules=" + mods
-        };
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+
+        String mods = String.join(",",
+            "resources", "server", "http", "jmx",
+            toEnvironment("webapp", env),
+            toEnvironment("deploy", env),
+            toEnvironment("apache-jsp", env)
+        );
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=" + mods))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -222,11 +219,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             distribution.installWarFile(war, "test");
 
             int port = distribution.freePort();
-            String[] args2 = {
-                "--jpms",
-                "jetty.http.port=" + port
-            };
-            try (JettyHomeTester.Run run2 = distribution.start(args2))
+            try (JettyHomeTester.Run run2 = distribution.start("--jpms", "jetty.http.port=" + port))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", 10, TimeUnit.SECONDS));
 
@@ -261,10 +254,12 @@ public class DistributionTests extends AbstractJettyHomeTest
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String[] args1 = {
-            "--add-modules=" + toEnvironment("apache-jsp", env) + "," + toEnvironment("deploy", env)  + (ssl ? ",http2,test-keystore" : ",http2c")
-        };
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        String mods = String.join(",",
+            (ssl ? "http2,test-keystore" : "http2c"),
+            toEnvironment("deploy", env),
+            toEnvironment("apache-jsp", env)
+        );
+        try (JettyHomeTester.Run run1 = distribution.start("--add-modules=" + mods))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -290,35 +285,28 @@ public class DistributionTests extends AbstractJettyHomeTest
         }
     }
 
-    //TODO test shows stacktrace but works anyway?
     @ParameterizedTest
     @ValueSource(strings = {"ee9", "ee10"})
     public void testLog4j2ModuleWithSimpleWebAppWithJSP(String env) throws Exception
     {
-        Path jettyBase = newTestJettyBaseDirectory();
         String jettyVersion = System.getProperty("jettyVersion");
         JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
-            .jettyBase(jettyBase)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
-        
-        String mods = "resources,server,http,logging-log4j2," +
-            toEnvironment("webapp", env) + "," +
-            toEnvironment("deploy", env) + "," +
-            toEnvironment("apache-jsp", env) + "," +
-            toEnvironment("servlet", env);
-        
-        String[] args1 = {
-            "--approve-all-licenses",
-            "--add-modules=" + mods
-        };
-        
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+
+        String mods = String.join(",",
+            "resources", "server", "http", "logging-log4j2",
+            toEnvironment("webapp", env),
+            toEnvironment("deploy", env),
+            toEnvironment("apache-jsp", env),
+            toEnvironment("servlet", env)
+        );
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=" + mods))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
-            assertTrue(Files.exists(jettyBase.resolve("resources/log4j2.xml")));
+            assertTrue(Files.exists(distribution.getJettyBase().resolve("resources/log4j2.xml")));
 
             File war = distribution.resolveArtifact("org.eclipse.jetty." + env + ".demos:jetty-" + env + "-demo-jsp-webapp:war:" + jettyVersion);
             distribution.installWarFile(war, "test");
@@ -333,44 +321,32 @@ public class DistributionTests extends AbstractJettyHomeTest
                 assertEquals(HttpStatus.OK_200, response.getStatus());
                 assertThat(response.getContentAsString(), containsString("JSP Examples"));
                 assertThat(response.getContentAsString(), not(containsString("<%")));
-                assertTrue(Files.exists(jettyBase.resolve("resources/log4j2.xml")));
+                assertTrue(Files.exists(distribution.getJettyBase().resolve("resources/log4j2.xml")));
             }
         }
-        finally
-        {
-            IO.delete(jettyBase.toFile());
-        }
     }
-    
-    @Disabled //TODO websocket modules broken
+
     @ParameterizedTest
-    // @CsvSource({"http,ee10", "http,ee9", "https,ee9", "https,ee10"})
-    @CsvSource({"http,ee10", "https,ee10"})
+    @CsvSource({"http,ee9", "https,ee9", "http,ee10", "https,ee10"})
     public void testWebsocketClientInWebappProvidedByServer(String scheme, String env) throws Exception
     {
-        Path jettyBase = newTestJettyBaseDirectory();
         String jettyVersion = System.getProperty("jettyVersion");
         JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
-            .jettyBase(jettyBase)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String module = "https".equals(scheme) ? "test-keystore," + scheme : scheme;
-
-        String mods = "resources,server,jmx,websocket," +
-            toEnvironment("webapp", env) + "," +
-            toEnvironment("deploy", env) + "," + 
-            toEnvironment("apache-jsp", env) + "," + 
-            toEnvironment("websocket-jetty-client", env) + "," +
-            module;
-
-        String[] args1 = {
-            "--create-startd",
-            "--approve-all-licenses",
-            "--add-modules=" + mods
-            };
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        boolean ssl = "https".equals(scheme);
+        String mods = String.join(",",
+            "resources", "server", "jmx",
+            ssl ? "https,test-keystore" : "http",
+            toEnvironment("webapp", env),
+            toEnvironment("websocket-jakarta", env),
+            toEnvironment("deploy", env),
+            toEnvironment("apache-jsp", env),
+            toEnvironment("websocket-jetty-client", env)
+        );
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=" + mods))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -379,18 +355,12 @@ public class DistributionTests extends AbstractJettyHomeTest
             distribution.installWarFile(webApp, "test");
 
             int port = distribution.freePort();
-            String[] args2 = {
-                "jetty.http.port=" + port,
-                "jetty.ssl.port=" + port,
-                // "jetty.server.dumpAfterStart=true",
-            };
-
-            try (JettyHomeTester.Run run2 = distribution.start(args2))
+            try (JettyHomeTester.Run run2 = distribution.start(ssl ? "jetty.ssl.port=" + port : "jetty.http.port=" + port))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", 10, TimeUnit.SECONDS));
 
                 // We should get the correct configuration from the jetty-websocket-httpclient.xml file.
-                startHttpClient(scheme.equals("https"));
+                startHttpClient(ssl);
                 URI serverUri = URI.create(scheme + "://localhost:" + port + "/test");
                 ContentResponse response = client.GET(serverUri);
                 assertEquals(HttpStatus.OK_200, response.getStatus());
@@ -401,33 +371,26 @@ public class DistributionTests extends AbstractJettyHomeTest
         }
     }
 
-    @Disabled //TODO websocket modules broken
     @ParameterizedTest
-    // @CsvSource({"http,ee10", "http,ee9", "https,ee9", "https,ee10"})
-    @CsvSource({"http,ee10", "https,ee10"})
+    @CsvSource({"http,ee9", "https,ee9", "http,ee10", "https,ee10"})
     public void testWebsocketClientInWebapp(String scheme, String env) throws Exception
     {
-        Path jettyBase = newTestJettyBaseDirectory();
         String jettyVersion = System.getProperty("jettyVersion");
         JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
-            .jettyBase(jettyBase)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String module = "https".equals(scheme) ? "test-keystore," + scheme : scheme;
-
-        String mods = "resources,server,jmx,websocket," +
-            toEnvironment("webapp", env) + "," +
-            toEnvironment("deploy", env) + "," + 
-            toEnvironment("apache-jsp", env) + "," + 
-            module;
-        String[] args1 = {
-            "--create-startd",
-            "--approve-all-licenses",
-            "--add-modules=" + mods
-        };
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        boolean ssl = "https".equals(scheme);
+        String mods = String.join(",",
+            "resources", "server", "jmx",
+            ssl ? "https,test-keystore" : "http",
+            toEnvironment("webapp", env),
+            toEnvironment("websocket-jakarta", env),
+            toEnvironment("deploy", env),
+            toEnvironment("apache-jsp", env)
+        );
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=" + mods))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -436,13 +399,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             distribution.installWarFile(webApp, "test");
 
             int port = distribution.freePort();
-            String[] args2 = {
-                "jetty.http.port=" + port,
-                "jetty.ssl.port=" + port,
-                // "jetty.server.dumpAfterStart=true",
-            };
-
-            try (JettyHomeTester.Run run2 = distribution.start(args2))
+            try (JettyHomeTester.Run run2 = distribution.start(ssl ? "jetty.ssl.port=" + port : "jetty.http.port=" + port))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", 10, TimeUnit.SECONDS));
 
@@ -470,11 +427,9 @@ public class DistributionTests extends AbstractJettyHomeTest
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
+        String downloadURI = "https://repo1.maven.org/maven2/org/eclipse/jetty/maven-metadata.xml";
         String outPath = "etc/maven-metadata.xml";
-        String[] args1 = {
-            "--download=https://repo1.maven.org/maven2/org/eclipse/jetty/maven-metadata.xml|" + outPath
-        };
-        try (JettyHomeTester.Run run = distribution.start(args1))
+        try (JettyHomeTester.Run run = distribution.start("--download=" + downloadURI + "|" + outPath))
         {
             assertTrue(run.awaitConsoleLogsFor("Base directory was modified", 110, TimeUnit.SECONDS));
             Path target = jettyBase.resolve(outPath);
@@ -482,10 +437,8 @@ public class DistributionTests extends AbstractJettyHomeTest
         }
     }
 
-    @Disabled //TODO ee9 proxy demo not built
     @ParameterizedTest
-    //@ValueSource(strings = {"ee9", "ee10"})
-    @ValueSource(strings = {"ee10"})
+    @ValueSource(strings = {"ee9", "ee10"})
     public void testWebAppWithProxyAndJPMS(String env) throws Exception
     {
         String jettyVersion = System.getProperty("jettyVersion");
@@ -494,19 +447,15 @@ public class DistributionTests extends AbstractJettyHomeTest
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String[] args1 = {
-            "--add-modules=http,resources," + toEnvironment("webapp", env) + "," + toEnvironment("deploy", env)
-        };
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        String mods = String.join(",",
+            "resources", "http",
+            toEnvironment("webapp", env),
+            toEnvironment("deploy", env)
+        );
+        try (JettyHomeTester.Run run1 = distribution.start("--add-modules=" + mods))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
-
-            Path logFile = distribution.getJettyBase().resolve("resources").resolve("jetty-logging.properties");
-            try (BufferedWriter writer = Files.newBufferedWriter(logFile, StandardCharsets.UTF_8, StandardOpenOption.CREATE))
-            {
-                writer.write("org.eclipse.jetty.LEVEL=INFO");
-            }
 
             File war = distribution.resolveArtifact("org.eclipse.jetty." + env + ".demos:jetty-" + env + "-demo-proxy-webapp:war:" + jettyVersion);
             distribution.installWarFile(war, "proxy");
@@ -523,125 +472,115 @@ public class DistributionTests extends AbstractJettyHomeTest
         }
     }
 
-    /**
-     * This reproduces some classloading issue with MethodHandles in JDK14-110, This has been fixed in JDK16.
-     *
-     * @throws Exception if there is an error during the test.
-     * @see <a href="https://bugs.openjdk.java.net/browse/JDK-8244090">JDK-8244090</a>
-     */
-    /*    @ParameterizedTest
-    @ValueSource(strings = {"", "--jpms"})
-    @DisabledOnJre({JRE.JAVA_14, JRE.JAVA_15})
-    public void testSimpleWebAppWithWebsocket(String arg) throws Exception
+    @ParameterizedTest
+    @CsvSource(value = {"ee9,false", "ee10,false", "ee10,true"})
+    public void testSimpleWebAppWithWebsocket(String env, String jpms) throws Exception
     {
+        // Testing ee9 with JPMS won't work because ee9 jakarta.* jars
+        // do not have a proper module-info.java so JPMS resolution fails.
+
         String jettyVersion = System.getProperty("jettyVersion");
         JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
-        String[] args1 = {
-            "--approve-all-licenses",
-            "--add-modules=resources,server,http,webapp,deploy,jsp,jmx,servlet,servlets,websocket"
-        };
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+
+        String mods = String.join(",",
+            "resources", "http", "jmx",
+            toEnvironment("webapp", env),
+            toEnvironment("deploy", env),
+            toEnvironment("websocket-jakarta", env),
+            toEnvironment("apache-jsp", env)
+        );
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=" + mods))
         {
             assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
-    
-            File webApp = distribution.resolveArtifact("org.eclipse.jetty.tests:test-websocket-webapp:war:" + jettyVersion);
+
+            File webApp = distribution.resolveArtifact("org.eclipse.jetty." + env + ":jetty-" + env + "-test-websocket-webapp:war:" + jettyVersion);
             distribution.installWarFile(webApp, "test1");
             distribution.installWarFile(webApp, "test2");
-    
+
             int port = distribution.freePort();
-            String[] args2 = {
-                arg,
-                "jetty.http.port=" + port//,
-                //"jetty.server.dumpAfterStart=true"
-            };
-    
+            List<String> args2 = new ArrayList<>();
+            args2.add("jetty.http.port=" + port);
+            if (Boolean.parseBoolean(jpms))
+                args2.add("--jpms");
             try (JettyHomeTester.Run run2 = distribution.start(args2))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", 10, TimeUnit.SECONDS));
-                assertFalse(run2.getLogs().stream().anyMatch(s -> s.contains("LinkageError")));
-    
-                startHttpClient();
-                WebSocketClient wsClient = new WebSocketClient(client);
-                wsClient.start();
-                URI serverUri = URI.create("ws://localhost:" + port);
-    
-                // Verify /test1 is able to establish a WebSocket connection.
+
+                URI serverUri = URI.create("ws://localhost:" + port + "/test1/");
                 WsListener webSocketListener = new WsListener();
-                Session session = wsClient.connect(webSocketListener, serverUri.resolve("/test1")).get(10, TimeUnit.SECONDS);
-                session.getRemote().sendString("echo message");
+                var wsBuilder = java.net.http.HttpClient.newHttpClient().newWebSocketBuilder();
+                WebSocket webSocket = wsBuilder.buildAsync(serverUri, webSocketListener).get(10, TimeUnit.SECONDS);
+
+                // Verify /test1 is able to establish a WebSocket connection.
+                webSocket.sendText("echo message", true);
                 assertThat(webSocketListener.textMessages.poll(10, TimeUnit.SECONDS), is("echo message"));
-                session.close();
+                webSocket.sendClose(WebSocket.NORMAL_CLOSURE, "");
                 assertTrue(webSocketListener.closeLatch.await(10, TimeUnit.SECONDS));
-                assertThat(webSocketListener.closeCode, is(StatusCode.NORMAL));
-    
+                assertThat(webSocketListener.closeCode, is(WebSocket.NORMAL_CLOSURE));
+
                 // Verify /test2 is able to establish a WebSocket connection.
+                serverUri = URI.create("ws://localhost:" + port + "/test2/");
                 webSocketListener = new WsListener();
-                session = wsClient.connect(webSocketListener, serverUri.resolve("/test2")).get(10, TimeUnit.SECONDS);
-                session.getRemote().sendString("echo message");
+                webSocket = wsBuilder.buildAsync(serverUri, webSocketListener).get(10, TimeUnit.SECONDS);
+                webSocket.sendText("echo message", true);
                 assertThat(webSocketListener.textMessages.poll(10, TimeUnit.SECONDS), is("echo message"));
-                session.close();
+                webSocket.sendClose(WebSocket.NORMAL_CLOSURE, "");
                 assertTrue(webSocketListener.closeLatch.await(10, TimeUnit.SECONDS));
-                assertThat(webSocketListener.closeCode, is(StatusCode.NORMAL));
+                assertThat(webSocketListener.closeCode, is(WebSocket.NORMAL_CLOSURE));
             }
         }
     }
-    
-    public static class WsListener implements WebSocketListener
+
+    public static class WsListener implements WebSocket.Listener
     {
         public BlockingArrayQueue<String> textMessages = new BlockingArrayQueue<>();
         public final CountDownLatch closeLatch = new CountDownLatch(1);
         public int closeCode;
-    
-        @Override
-        public void onWebSocketClose(int statusCode, String reason)
-        {
-            this.closeCode = statusCode;
-            closeLatch.countDown();
-        }
-    
-        @Override
-        public void onWebSocketText(String message)
-        {
-            textMessages.add(message);
-        }
-    }*/
 
-    //TODO exception in test but still works?
+        @Override
+        public CompletionStage<?> onText(WebSocket webSocket, CharSequence data, boolean last)
+        {
+            textMessages.add(data.toString());
+            webSocket.request(1);
+            return null;
+        }
+
+        @Override
+        public CompletionStage<?> onClose(WebSocket webSocket, int statusCode, String reason)
+        {
+            closeCode = statusCode;
+            closeLatch.countDown();
+            return null;
+        }
+    }
+
     @Test
     public void testStartStopLog4j2Modules() throws Exception
     {
-        Path jettyBase = newTestJettyBaseDirectory();
-
         String jettyVersion = System.getProperty("jettyVersion");
         JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
             .jettyVersion(jettyVersion)
-            .jettyBase(jettyBase)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String[] args = {
-            "--approve-all-licenses",
-            "--add-modules=http,logging-log4j2"
-        };
-
-        try (JettyHomeTester.Run run1 = distribution.start(args))
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=http,logging-log4j2"))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
 
             Files.copy(Paths.get("src/test/resources/log4j2.xml"),
-                Paths.get(jettyBase.toString(), "resources").resolve("log4j2.xml"),
+                distribution.getJettyBase().resolve("resources").resolve("log4j2.xml"),
                 StandardCopyOption.REPLACE_EXISTING);
 
             int port = distribution.freePort();
             try (JettyHomeTester.Run run2 = distribution.start("jetty.http.port=" + port))
             {
                 assertTrue(run2.awaitLogsFileFor(
-                    jettyBase.resolve("logs").resolve("jetty.log"),
+                    distribution.getJettyBase().resolve("logs").resolve("jetty.log"),
                     "Started oejs.Server@", 10, TimeUnit.SECONDS));
 
                 startHttpClient();
@@ -663,12 +602,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String[] args = {
-            "--approve-all-licenses",
-            "--add-modules=http,logging-jul"
-        };
-
-        try (JettyHomeTester.Run run1 = distribution.start(args))
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=http,logging-jul"))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -702,12 +636,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String[] args = {
-            "--approve-all-licenses",
-            "--add-modules=http,logging-jul-capture"
-        };
-
-        try (JettyHomeTester.Run run1 = distribution.start(args))
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=http,logging-jul-capture"))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -759,7 +688,6 @@ public class DistributionTests extends AbstractJettyHomeTest
         }
     }
 
-    @Disabled //TODO correct xml syntax
     @Test
     public void testBeforeDirectiveInModule() throws Exception
     {
@@ -769,11 +697,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String[] args1 = {
-            "--add-modules=https,test-keystore"
-        };
-
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        try (JettyHomeTester.Run run1 = distribution.start("--add-modules=https,test-keystore"))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -783,52 +707,50 @@ public class DistributionTests extends AbstractJettyHomeTest
             Path jettyBaseEtc = jettyBase.resolve("etc");
             Files.createDirectories(jettyBaseEtc);
             Path sslPatchXML = jettyBaseEtc.resolve("ssl-patch.xml");
-            String nextProtocol = "fcgi/1.0";
-            String xml = "" +
-                "<?xml version=\"1.0\"?>" +
-                "<!DOCTYPE Configure PUBLIC \"-//Jetty//Configure//EN\" \"https://www.eclipse.org/jetty/configure_10_0.dtd\">" +
-                "<Configure id=\"sslConnector\" class=\"org.eclipse.jetty.server.ServerConnector\">" +
-                "  <Call name=\"addIfAbsentConnectionFactory\">" +
-                "    <Arg>" +
-                "      <New class=\"org.eclipse.jetty.server.SslConnectionFactory\">" +
-                "        <Arg name=\"next\">" + nextProtocol + "</Arg>" +
-                "        <Arg name=\"sslContextFactory\"><Ref refid=\"sslContextFactory\"/></Arg>" +
-                "      </New>" +
-                "    </Arg>" +
-                "  </Call>" +
-                "  <Call name=\"addConnectionFactory\">" +
-                "    <Arg>" +
-                "      <New class=\"org.eclipse.jetty.fcgi.server.ServerFCGIConnectionFactory\">" +
-                "        <Arg><Ref refid=\"sslHttpConfig\" /></Arg>" +
-                "      </New>" +
-                "    </Arg>" +
-                "  </Call>" +
-                "</Configure>";
+            String xml = """
+                <?xml version="1.0"?>
+                <!DOCTYPE Configure PUBLIC "-//Jetty//Configure//EN" "https://www.eclipse.org/jetty/configure_10_0.dtd">
+                <Configure id="sslConnector" class="org.eclipse.jetty.server.ServerConnector">
+                  <Call name="addIfAbsentConnectionFactory">
+                    <Arg>
+                      <New class="org.eclipse.jetty.server.SslConnectionFactory">
+                        <Arg name="next">fcgi/1.0</Arg>
+                        <Arg name="sslContextFactory"><Ref refid="sslContextFactory"/></Arg>
+                      </New>
+                    </Arg>
+                  </Call>
+                  <Call name="addConnectionFactory">
+                    <Arg>
+                      <New class="org.eclipse.jetty.fcgi.server.ServerFCGIConnectionFactory">
+                        <Arg><Ref refid="sslHttpConfig" /></Arg>
+                      </New>
+                    </Arg>
+                  </Call>
+                </Configure>
+                """;
             Files.write(sslPatchXML, List.of(xml), StandardOpenOption.CREATE);
 
             Path jettyBaseModules = jettyBase.resolve("modules");
             Files.createDirectories(jettyBaseModules);
             Path sslPatchModule = jettyBaseModules.resolve("ssl-patch.mod");
-            String module = "" +
-                "[depends]\n" +
-                "fcgi\n" +
-                "\n" +
-                "[before]\n" +
-                "https\n" +
-                "http2\n" + // http2 is not explicitly enabled.
-                "\n" +
-                "[after]\n" +
-                "ssl\n" +
-                "\n" +
-                "[xml]\n" +
-                "etc/ssl-patch.xml\n";
+            // http2 is not explicitly enabled.
+            String module = """
+                [depends]
+                fcgi
+
+                [before]
+                https
+                http2
+
+                [after]
+                ssl
+
+                [xml]
+                etc/ssl-patch.xml
+                """;
             Files.write(sslPatchModule, List.of(module), StandardOpenOption.CREATE);
 
-            String[] args2 = {
-                "--add-modules=ssl-patch"
-            };
-
-            try (JettyHomeTester.Run run2 = distribution.start(args2))
+            try (JettyHomeTester.Run run2 = distribution.start("--add-modules=ssl-patch"))
             {
                 assertTrue(run2.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
                 assertEquals(0, run2.getExitValue());
@@ -860,12 +782,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
 
-        String[] args1 = {
-            "--approve-all-licenses",
-            "--add-modules=logging-logback,http"
-        };
-
-        try (JettyHomeTester.Run run1 = distribution1.start(args1))
+        try (JettyHomeTester.Run run1 = distribution1.start("--approve-all-licenses", "--add-modules=logging-logback,http"))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -883,12 +800,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             .build();
 
         // Try the modules in reverse order, since it may execute a different code path.
-        String[] args2 = {
-            "--approve-all-licenses",
-            "--add-modules=http,logging-logback"
-        };
-
-        try (JettyHomeTester.Run run2 = distribution2.start(args2))
+        try (JettyHomeTester.Run run2 = distribution2.start("--approve-all-licenses", "--add-modules=http,logging-logback"))
         {
             assertTrue(run2.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run2.getExitValue());
@@ -989,7 +901,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             "[ini]\n" +
             "" + pathProperty + "=modbased\n";
         String moduleName = "ssl-ini";
-        Files.write(jettyBaseModules.resolve(moduleName + ".mod"), module.getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE);
+        Files.writeString(jettyBaseModules.resolve(moduleName + ".mod"), module, StandardOpenOption.CREATE);
 
         try (JettyHomeTester.Run run1 = distribution.start("--add-module=https,test-keystore,ssl-ini"))
         {
@@ -999,9 +911,9 @@ public class DistributionTests extends AbstractJettyHomeTest
             // Override the property on the command line with the correct password.
             try (JettyHomeTester.Run run2 = distribution.start(pathProperty + "=cmdline"))
             {
-                assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", 5, TimeUnit.SECONDS));
-                PathAssert.assertFileExists("${jetty.base}/cmdline", jettyBase.resolve("cmdline"));
-                PathAssert.assertNotPathExists("${jetty.base}/modbased", jettyBase.resolve("modbased"));
+                assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", START_TIMEOUT, TimeUnit.SECONDS));
+                assertThat("${jetty.base}/cmdline", jettyBase.resolve("cmdline"), PathMatchers.isRegularFile());
+                assertThat("${jetty.base}/modbased", jettyBase.resolve("modbased"), not(PathMatchers.exists()));
             }
         }
     }
@@ -1014,11 +926,8 @@ public class DistributionTests extends AbstractJettyHomeTest
             .jettyVersion(jettyVersion)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
-        String[] args1 = {
-            "--approve-all-licenses",
-            "--add-modules=http,well-known"
-        };
-        try (JettyHomeTester.Run run1 = distribution.start(args1))
+
+        try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=http,well-known"))
         {
             assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
@@ -1038,12 +947,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             }
 
             int port = distribution.freePort();
-            String[] args2 = {
-                "jetty.http.port=" + port
-                //"jetty.server.dumpAfterStart=true"
-            };
-
-            try (JettyHomeTester.Run run2 = distribution.start(args2))
+            try (JettyHomeTester.Run run2 = distribution.start("jetty.http.port=" + port))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", 10, TimeUnit.SECONDS));
 
@@ -1106,7 +1010,8 @@ public class DistributionTests extends AbstractJettyHomeTest
         }
     }
 
-    /*    @Test
+    @Test
+    @Tag("flaky")
     public void testH3() throws Exception
     {
         String jettyVersion = System.getProperty("jettyVersion");
@@ -1114,18 +1019,18 @@ public class DistributionTests extends AbstractJettyHomeTest
             .jettyVersion(jettyVersion)
             .mavenLocalRepository(System.getProperty("mavenRepoPath"))
             .build();
-    
+
         try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=http3,test-keystore"))
         {
-            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
+            assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
             assertEquals(0, run1.getExitValue());
-    
+
             int h2Port = distribution.freePort();
             int h3Port = distribution.freePort();
             try (JettyHomeTester.Run run2 = distribution.start(List.of("jetty.ssl.selectors=1", "jetty.ssl.port=" + h2Port, "jetty.quic.port=" + h3Port)))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", 10, TimeUnit.SECONDS));
-    
+
                 HTTP3Client http3Client = new HTTP3Client();
                 http3Client.getQuicConfiguration().setVerifyPeerCertificates(false);
                 this.client = new HttpClient(new HttpClientTransportOverHTTP3(http3Client));
@@ -1138,5 +1043,131 @@ public class DistributionTests extends AbstractJettyHomeTest
                 assertEquals(HttpStatus.NOT_FOUND_404, response.getStatus());
             }
         }
-    }*/
+    }
+
+    @Test
+    public void testDryRunProperties() throws Exception
+    {
+        String jettyVersion = System.getProperty("jettyVersion");
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .mavenLocalRepository(System.getProperty("mavenRepoPath"))
+            .build();
+
+        try (JettyHomeTester.Run run1 = distribution.start("--add-to-start=server,logging-jetty"))
+        {
+            assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
+            assertEquals(0, run1.getExitValue());
+
+            try (JettyHomeTester.Run run2 = distribution.start("--dry-run"))
+            {
+                run2.awaitFor(5, TimeUnit.SECONDS);
+                Queue<String> logs = run2.getLogs();
+                assertThat(logs.size(), equalTo(1));
+                assertThat(logs.poll(), not(containsString("${jetty.home.uri}")));
+            }
+        }
+    }
+
+    @Test
+    public void testFastCGIProxying() throws Exception
+    {
+        String jettyVersion = System.getProperty("jettyVersion");
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .mavenLocalRepository(System.getProperty("mavenRepoPath"))
+            .build();
+
+        try (JettyHomeTester.Run run1 = distribution.start(List.of("--add-modules=resources,http,fcgi,fcgi-proxy,core-deploy")))
+        {
+            assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
+            assertEquals(0, run1.getExitValue());
+
+            // Add a FastCGI connector to simulate, for example, php-fpm.
+            int fcgiPort = distribution.freePort();
+            Path jettyBase = distribution.getJettyBase();
+            Path jettyBaseEtc = jettyBase.resolve("etc");
+            Files.createDirectories(jettyBaseEtc);
+            Path fcgiConnectorXML = jettyBaseEtc.resolve("fcgi-connector.xml");
+            Files.writeString(fcgiConnectorXML, """
+                <?xml version="1.0"?>
+                <!DOCTYPE Configure PUBLIC "-//Jetty//Configure//EN" "https://www.eclipse.org/jetty/configure_10_0.dtd">
+                <Configure id="Server">
+                  <Call name="addConnector">
+                    <Arg>
+                      <New id="fcgiConnector" class="org.eclipse.jetty.server.ServerConnector">
+                        <Arg><Ref refid="Server" /></Arg>
+                        <Arg type="int">1</Arg>
+                        <Arg type="int">1</Arg>
+                        <Arg>
+                          <Array type="org.eclipse.jetty.server.ConnectionFactory">
+                            <Item>
+                              <New class="org.eclipse.jetty.fcgi.server.ServerFCGIConnectionFactory">
+                                <Arg><Ref refid="httpConfig" /></Arg>
+                              </New>
+                            </Item>
+                          </Array>
+                        </Arg>
+                        <Set name="port">$P</Set>
+                      </New>
+                    </Arg>
+                  </Call>
+                </Configure>
+                """.replace("$P", String.valueOf(fcgiPort)), StandardOpenOption.CREATE);
+
+            // Deploy a Jetty context XML file that is only necessary for the test,
+            // as it simulates, for example, what the php-fpm server would return.
+            Path jettyBaseWork = jettyBase.resolve("work");
+            Path phpXML = jettyBase.resolve("webapps").resolve("php.xml");
+            Files.writeString(phpXML, """
+                <?xml version="1.0"?>
+                <!DOCTYPE Configure PUBLIC "-//Jetty//Configure//EN" "https://www.eclipse.org/jetty/configure_10_0.dtd">
+                <Configure class="org.eclipse.jetty.server.handler.ContextHandler">
+                  <Set name="contextPath">/php</Set>
+                  <Set name="baseResourceAsPath">
+                    <Call class="java.nio.file.Path" name="of">
+                      <Arg>$R</Arg>
+                    </Call>
+                  </Set>
+                  <Set name="handler">
+                    <New class="org.eclipse.jetty.server.handler.ResourceHandler" />
+                  </Set>
+                </Configure>
+                """.replace("$R", jettyBaseWork.toAbsolutePath().toString()), StandardOpenOption.CREATE);
+            // Save a file in $JETTY_BASE/work so that it can be requested.
+            String testFileContent = "hello";
+            Files.writeString(jettyBaseWork.resolve("test.txt"), testFileContent, StandardOpenOption.CREATE);
+
+            // Deploy a Jetty context XML file that sets up the FastCGIProxyHandler.
+            // Converts URIs from http://host:<httpPort>/proxy/foo to http://host:<fcgiPort>/app/foo.
+            Path proxyXML = jettyBase.resolve("webapps").resolve("proxy.xml");
+            Files.writeString(proxyXML, """
+                <?xml version="1.0"?>
+                <!DOCTYPE Configure PUBLIC "-//Jetty//Configure//EN" "https://www.eclipse.org/jetty/configure_10_0.dtd">
+                <Configure class="org.eclipse.jetty.server.handler.ContextHandler">
+                  <Set name="contextPath">/proxy</Set>
+                  <Set name="handler">
+                    <New class="org.eclipse.jetty.fcgi.proxy.FastCGIProxyHandler">
+                      <Arg>(https?)://([^:]+):(\\d+)/([^/]+)/(.*)</Arg>
+                      <Arg>$1://$2:$P/php/$5</Arg>
+                      <Arg>/var/wordpress</Arg>
+                    </New>
+                  </Set>
+                </Configure>
+                """.replace("$P", String.valueOf(fcgiPort)), StandardOpenOption.CREATE);
+
+            int httpPort = distribution.freePort();
+            try (JettyHomeTester.Run run2 = distribution.start("jetty.http.port=" + httpPort, "etc/fcgi-connector.xml"))
+            {
+                assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", 10, TimeUnit.SECONDS));
+
+                startHttpClient();
+                // Make a request to the /proxy context on the httpPort; it should be converted to FastCGI
+                // and reverse proxied to the simulated php-fpm /php context on the fcgiPort.
+                ContentResponse response = client.GET("http://localhost:" + httpPort + "/proxy/test.txt");
+                assertThat(response.getStatus(), is(HttpStatus.OK_200));
+                assertThat(response.getContentAsString(), is(testFileContent));
+            }
+        }
+    }
 }
